# morphir

./: .gitignore  .plzconfig  .prototools  BUILD  Cargo.toml  Directory.Packages.props  Drakefile.ts  Makefile.toml  Morphir.sln  build.fsx  moon.yml
.moon/: workspace.yml
.moon/tasks/: rust-application.yml  rust.yml
bindings/scala/: .gitignore  build.sc
build_defs/: word_count.build_defs
morphir-dotnet/: Directory.Packages.props  morphir.sln
morphir-dotnet/.config/: dotnet-tools.json
morphir-dotnet/notebooks/: Serde.dib  TypeShapeUsage.dib
morphir-dotnet/scripts/experimental/: json_encoding_and_decoding.fsx
morphir-dotnet/src/Morphir/: Morphir.fsproj
morphir-dotnet/src/Morphir.CodeModel/: Morphir.CodeModel.fsproj  Settings.fs
morphir-dotnet/src/Morphir.CodeModel.SystemTextJson/: Morphir.CodeModel.SystemTextJson.fsproj
morphir-dotnet/src/Morphir.CodeModel.SystemTextJson/IR/: Codec.fs
morphir-dotnet/src/Morphir.CodeModel/CodeModel/: CodeModel.fs  TypeInfo.fs  naming.fs  versioning.fs
morphir-dotnet/src/Morphir.CodeModel/Codecs/: IMorphirWriter.fs  MorphirFormatOptions.fs
morphir-dotnet/src/Morphir.CodeModel/IR/: Codecs.Json.fs  ContextProperties.fs  IR.fs  Name.fs  writer.fs
morphir-dotnet/src/Morphir.SDK.Core/: Morphir.SDK.Core.fsproj
morphir-dotnet/src/Morphir.Server/: Client.fs  Morphir.Server.fsproj  Program.fs  Remoting.fs  Site.fs  WebSharperExtensions.fs
morphir-dotnet/tests/Morphir.CodeModel.CSharp.Tests/: Morphir.CodeModel.CSharp.Tests.csproj  MorphirWriterTests.cs
morphir-dotnet/tests/Morphir.CodeModel.Tests/: Morphir.CodeModel.Tests.fsproj
morphir-rust/: Cargo.toml
morphir-rust/main/: Cargo.toml
morphir-rust/sandbox/command/: Cargo.toml
morphir-rust/sandbox/command/src/: bindings.rs  main.rs
morphir-rust/sandbox/name_component/: Cargo.toml
morphir-rust/sandbox/name_component/src/: bindings.rs  lib.rs
scripts/deno/: git-clone.ts
wit/: finos-morphir.wit  morphir-ir-name.wit  morphir.wit
wit/sandbox/: morphir-ir-name.wit  morphir.wit
workspace/dotnet/morphir-fs/: Program.fs  morphir-fs.fsproj  packages.lock.json
workspace/elm/: .gitignore
workspace/fsharp/morphir-fs/: Program.fs  morphir-fs.fsproj
(+79 files in other folders)
