[workspace]
resolver = "2"
members = [
    "morphir-rust/crates/codemodel",
    "morphir-rust/crates/cli",
    "morphir-rust/main",
    "morphir-rust/sandbox/name_component",
    "morphir-rust/sandbox/command",
]
default-members = ["morphir-rust/main"]

[workspace.dependencies]
clap = { version = "4.4.18", default-features = false, features = [
    "std",
    "error-context",
] }
clap_complete = "4.4.10"
schematic = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
warpgate = "0.12.1"
wasmtime = "19.0.1"
