[workspace]
resolver = "2"
members = [
    "packages/codemodel",
    "packages/cli",
    "packages/morphir",
    "sandbox/name_component",
    "sandbox/command",
]
default-members = ["morphir-rust/morphir"]

[workspace.dependencies]
clap = { version = "4.4.18", default-features = false, features = [
    "std",
    "error-context",
] }
clap_complete = "4.4.10"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
